[package]
name = "pact-cli"
version = "0.1.0"
edition = "2021"
description = "P.A.C.T. - Project Automation, Configuration, and Terminal Multiplexing"
readme = "README.md"
repository = "https://github.com/Abishevs/PACT.git"
license-file = "LICENSE"
keywords = ["automation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
